sets input font-size to 16px, to prevent zoom-in on mobile devices

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -19,6 +19,7 @@
   padding: 10px;
   width: 100%;
   box-sizing: border-box;
+  font-size: 16px;
 }
 
 .navbar {
